# chimera

./: .coverage  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  LICENSE  README.md  SECURITY.md  chimera.yaml  chimera.yaml.docker  chimera.yaml.example  docker-compose.yml  pyproject.toml
.coding-hermes/: tasks.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.gitreins/: config.yaml  config.yaml.bak  pre-commit  secrets-ignore  tasks.yaml
.gitreins/history/2026-06-21/a28de1c0/: summary.md  verdict.json
.gitreins/history/2026-06-21/b5aba7fe/: summary.md  verdict.json
.gitreins/history/2026-06-21/c1050e77/: summary.md  verdict.json
.gitreins/history/2026-06-22/64f4250b/: summary.md  verdict.json
.memory-bank/: active-context.md  product-context.md  progress.md  project-brief.md  system-patterns.md  tech-context.md
.vfs/: manifest.yaml
.vfs/graph/: edges.jsonl
docs/: CONFIG.md  Chimera-PRD.html  EDGE_CASES.md  FAILURE_RESILIENCE.md  OPENAI_API.md  PRD.html  README.md  RESILIENCE.md  SECURITY.md  USAGE.md  model-catalog.yaml
mutants/src/chimera/: __init__.py  aggregator.py  circuit_breaker.py  config.py  dispatcher.py  engine.py  exceptions.py  gateway.py  observability.py
mutants/src/chimera/api/: __init__.py  dependencies.py  rate_limit.py  server.py
mutants/src/chimera/cli/: __init__.py  main.py
mutants/src/chimera/mcp/: __init__.py  server.py
mutants/tests/: test_api.py  test_cli.py  test_concurrency.py  test_engine.py  test_init.py  test_observability.py  test_security.py
mutants/tests/compat/: test_models.py
scripts/: compat-smoke.sh  model_sync.py  model_sync_cron.py  start.sh
specs/: architecture.md  web-ui.md
src/chimera/: __init__.py  aggregator.py  circuit_breaker.py  config.py  dispatcher.py  engine.py  exceptions.py  gateway.py  judge.py  observability.py  provider_discovery.py  selector.py
src/chimera/api/: __init__.py  dependencies.py  rate_limit.py  server.py
src/chimera/cli/: __init__.py  main.py
src/chimera/mcp/: __init__.py  server.py
src/chimera/web/: __init__.py  routes.py  session.py  sse.py  trace_viz.py
src/chimera/web/static/: index.html
tests/: conftest.py  test_aggregator.py  test_api.py  test_cli.py  test_concurrency.py  test_config.py  test_dispatcher.py  test_e2e.py  test_engine.py  test_engine_coverage.py  test_gateway.py  test_gateway_coverage.py  test_init.py  test_iteration.py  test_judge.py  test_mcp.py  test_observability.py  test_parallel_stages.py  test_provider_discovery.py  test_rate_limit_coverage.py  test_security.py  test_selector.py  test_server_coverage.py  test_sse_parser.py  test_web.py
tests/compat/: __init__.py  conftest.py  test_models.py
tests/integration/: conftest.py  test_aggregator_fixes.py  test_api_surface.py  test_collaborative_evals.py  test_e2e_deliberation.py  test_error_paths.py  test_multi_turn_context.py  test_structured_output.py  test_web_sse.py
