[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chimera"
version = "0.1.0"
description = "Dynamic multi-model deliberation gateway"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.50.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
server = ["fastapi>=0.115.0", "uvicorn[standard]>=0.30.0"]
cli = ["click>=8.0", "rich>=13.0"]
mcp = ["mcp>=1.0.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24.0", "pytest-cov>=5.0", "ruff>=0.6.0"]
full = ["chimera[server,cli,mcp,dev]"]

[project.scripts]
chimera = "chimera.cli.main:main"
chimera-mcp = "chimera.mcp.server:run"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
