[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chimera-deliberation"
version = "0.2.0"
description = "Dynamic multi-model deliberation gateway"
requires-python = ">=3.11"
authors = [
    { name = "Total Wind-Up Flight Systems", email = "dev@totalwindup.com" },
]
license = { text = "MIT" }
readme = "README.md"
keywords = ["llm", "ai", "multi-model", "deliberation", "orchestration", "gateway"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "litellm>=1.50.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "httpx2>=2.0",
    "structlog>=24.0",
]

[project.urls]
Homepage = "https://github.com/totalwindupflightsystems/chimera"
Repository = "https://github.com/totalwindupflightsystems/chimera.git"
Issues = "https://github.com/totalwindupflightsystems/chimera/issues"
Changelog = "https://github.com/totalwindupflightsystems/chimera/blob/main/CHANGELOG.md"

[project.optional-dependencies]
server = ["fastapi>=0.115.0", "uvicorn[standard]>=0.30.0"]
cli = ["click>=8.0", "rich>=13.0"]
mcp = ["mcp>=1.0.0"]
web = ["fastapi>=0.115.0", "uvicorn[standard]>=0.30.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24.0", "pytest-cov>=5.0", "ruff>=0.6.0"]
full = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "click>=8.0",
    "rich>=13.0",
    "mcp>=1.0.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
]

[project.scripts]
chimera = "chimera.cli.main:main"
chimera-mcp = "chimera.mcp.server:run"

[tool.hatch.build.targets.wheel]
packages = ["src/chimera"]

[tool.hatch.build.targets.wheel.force-include]
"chimera.yaml.docker" = "chimera/chimera.yaml.docker"

[tool.ruff]
target-version = "py311"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "C4"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: integration tests (require --run-integration flag and live API keys)",
    "slow: tests that are slow to run",
    "compat: compatibility smoke tests (require --run-compat flag)",
]
